--- a/Code/index.html
+++ b/Code/index.html
@@ -2,8 +2,8 @@
  <html>
    <head>
      <meta charset="utf-8" />
-    <link rel="shortcut icon" type="x-icon" href="environment.png" />
-     <title>Hållbarhet Sverige</title>
+     <link rel="shortcut icon" type="x-icon" href="environment.png" />
+     <title>Hållbarhet i fokus</title>
      <link rel="stylesheet" href="style.css" />
      <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat|Open+Sans|Source+Serif+Pro" rel="stylesheet">
      <meta name="viewport" content="width=device-width" />
@@ -55,18 +55,14 @@
        </div>
        <h2>Personlig upplevelse</h2>
        <p><strong>Brinner du för hållbarhet inom ett särskilt område?</strong><br><br>Logga in för att skapa en läsarupplevelse som utgår från dig och dina intressen.</p>
-       <a class="skapaKontoButton">Skapa konto</a>
-       <a class="loggaInButton">Logga in</a>
+       <a>Logga in</a>
       </div>
    </div>
 
 </div>
 
 <footer>
-  <div><p> Ansvarig utgivare Team #1 <br> ©Technigo AB 2018</p></div>
-  <div class="logo">
-    <img src="./logo.svg" alt="Technigo" />
-  </div>
+
 
 </footer>
       <!-- Link to JS file -->
